--- a/project-detail.html
+++ b/project-detail.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Brody Cyphers | Portfolio</title>
+  <title>Project Details</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
